--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">mp-voucher-manager</string>
+    <string name="app_name">Mafia-Penguins Gutschein Manager</string>
 </resources>
